# proto_sep

./: .flake8  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_test.yml
docs/: conf.py  index.rst
docs/api/: modules.rst
proto_sep/: __init__.py  protostars.py
proto_sep/test/: conftest.py
proto_sep/utils/: configuration.py  logging.py  package_data.py
