
[metadata]
name = proto_sep
description = Tools for analysing protostar inclination as a function of seperation
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grburgess/proto_sep
author_email = jburgess@mpe.mpg.de
author = J. Michael Burgess
requires_python = >=3.7.0
license = GPL-2+

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/grburgess/proto_sep/issues
    Source Code = https://github.com/grburgess/proto_sep




[options]
packages = find_namespace:
package_dir =
    = .
include_package_data = True


install_requires =
    numpy
    matplotlib
    rich
    omegaconf
    astropy
    pandas


tests_require =
    pytest
    pytest-codecov



[options.packages.find]
where = .

[options.package_data]
proto_sep.data =
    *




[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = --color=yes --cov=proto_sep --cov-report=term -ra --ignore=proto_sep/test --ignore=proto_sep/_version.py
log_cli = 1
log_cli_level = INFO
testpaths = proto_sep/test 
norecursedirs = proto_sep/test


[versioneer]
VCS=git
style=pep440
versionfile_source=proto_sep/_version.py
versionfile_build=proto_sep/_version.py
tag_prefix=v
parentdir_prefix=proto_sep-

